# cheeseshirt

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  config.py  docker-compose.prod.yml  docker-compose.yml  email_service.py  env.example  llm-interface.md  main.py  order_processor.py  pyproject.toml  requirements.txt  test-stripe.py
.github/workflows/: build-and-push.yml
api/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  config.py  env.example  graphic-template.json  main.py  make_transparent.py  models.py  order_processor.py  package-lock.json  package.json  run.py  shopify_client.py  test_setup.py  tsconfig.json
api/src/: config.ts  conversations.ts  db.ts  logger.ts  monger-client.ts  monger.ts  server.ts  sessions.ts  shopify.ts  stripe.ts
api/web/: README.md
llm-base/: Dockerfile  requirements.txt
llm-base/llm_base/: __init__.py  models.py  provider.py  server.py  stats.py
llm-ollama/: Dockerfile  entrypoint.sh  provider.py  requirements.txt  server.py  stats.py
llm-ollama-phi3.5/: Dockerfile  entrypoint.sh  provider.py  server.py
llm-openai/: Dockerfile  provider.py  requirements.txt  server.py
monger/: ARCHITECTURE.md  Dockerfile  monger.json  monger.txt  requirements.txt
monger/config/: monger.json  referrals.json
monger/src/: __init__.py  character.py  config.py  main.py  models.py  referrals.py  stats.py
monger/src/llm/: __init__.py  base.py  client.py  factory.py  openai_provider.py
web/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: main.ts  styles.css
worker-shopify-orders/: DOCKER.md  QUICKSTART.md  README.md  WARP.md  WEBHOOKS.md  external_apis.py  pyproject.toml  requirements.txt  shopify_client.py
worker-stripe-orders/: Dockerfile  README.md  config.py  main.py  models.py  requirements.txt  stripe_client.py
