[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worker-shopify-orders"
version = "1.0.0"
description = "A worker that periodically pulls new orders from Shopify and serializes the content for processing by other workers"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Sean R", email = "seanr@example.com"}
]
license = {text = "MIT"}
keywords = ["shopify", "orders", "worker", "background-jobs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "email-validator==2.1.0",
    "jinja2==3.1.2",
    "aiofiles==23.2.1",
    "openai==1.3.7",
    "stripe==7.8.0",
    "twilio==8.10.3",
    "httpx==0.25.2",
    "python-multipart==0.0.6",
]

[project.urls]
Homepage = "https://github.com/contrived-com/cheeseshirt"
Repository = "https://github.com/contrived-com/cheeseshirt"

[project.scripts]
worker-shopify-orders = "main:main"

[tool.setuptools]
py-modules = [
    "main",
    "config",
    "models",
    "shopify_client",
    "order_processor",
    "email_service",
    "external_apis",
    "run"
]
